--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,13 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -37,20 +37,28 @@ ol {
   list-style: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .button {
-  margin: 3px;
   width: fit-content;
-  padding: 6px 20px;
-  background: transparent;
- 
   border: none;
   border: 1px solid #fff;
-  cursor: pointer;
-  font-family: "Fira Sans Condensed", Arial, sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 21.6px;
+  padding: 6px 20px;
   color: #fff;
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.6px;
+  background: transparent;
+  cursor: pointer;
 }
 
 .button:active {
@@ -70,24 +78,9 @@ ol {
   outline-offset: 2px;
 }
 
-.search-form__submit-button {
-  width: 194px;
-  align-self: flex-end;
-}
-
 .more-button {
   width: 99%;
   margin: 2px 3px;
-}
-
-.visually-hidden {
-  position: absolute;
-  inline-size: 1px;
-  block-size: 1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  white-space: nowrap;
 }
 
 .page {
@@ -97,24 +90,20 @@ ol {
 }
 
 .content {
-  max-width: 1140px;
-  margin: 133px 30px;
   display: flex;
   align-items: flex-end;
   gap: 30px;
+  max-width: 1140px;
+  margin: 133px 30px;
+  min-height: 534px;
   overflow: hidden;
-}
-
-.result {
-  /* margin-top: 78px; */
 }
 
 .result__video-container {
   position: relative;
-  margin-bottom: 16px;
   width: 711px;
   height: 386px;
-  
+  margin-bottom: 16px;
 }
 
 .result__video {
@@ -127,27 +116,30 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  /* gap: 40px; */
+  gap: 10px;
 }
 
-.search-form__label {
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+  margin: 2px;
 }
 
 .search-form__textfield {
-  margin: 2px;
   min-width: 225px;
-  padding: 2.5px 13px 2.5px 0;
-  appearance: none;
-  font-family: "Fira Sans Condensed", Arial, sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 100%;
-  text-align: left;
-  background: transparent;
+  margin: 2px;
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
+  padding: 2.5px 13px 2.5px 0;
   color: #fff;
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: left;
+  background: transparent;
+  appearance: none;
 }
 
 .search-form__textfield::placeholder {
@@ -158,91 +150,87 @@ ol {
   border: 1px solid #fff;
 }
 
-
 .search-form__textfield:focus {
-  outline: 1px solid #fff;
-  outline-offset: 2px;
+  outline: none;
 }
-
 
 .search-form__checkbox-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 15px;
 }
 
 .search-form__checkbox {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  appearance: none;
 }
 
-.search-form__pseudo-checkbox::after {
-  position: relative;
-  content: "";
-  display: block;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
-  width: 15px;
-  height: 15px;
-  background-color: #fff;
-}
-
-.search-form__checkbox:checked + .search-form__pseudo-checkbox::after  {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   opacity: 1;
 }
 
-.search-form__checkbox:not(:checked) + .search-form__pseudo-checkbox::after  {
+.search-form__checkbox:not(:checked) + .search-form__pseudo-checkbox::after {
   opacity: 0;
+}
+
+.search-form__pseudo-checkbox {
+  position: relative;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  position: relative;
+  top: 50%;
+  left: 50%;
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: fit-content;
+  cursor: pointer;
 }
 
 .search-form__label:hover {
   text-decoration: underline;
 }
 
-.search-form__label:focus-within {
+.search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
-  outline-offset: 2px;
-}
-
-.search-form__pseudo-checkbox {
-  position: relative;
-
-  margin-right: 5px;
-  width: 19px;
-  height: 19px;
-  border: 1px solid #fff;
-}
-
-.search-form__label {
-  display: flex;
-  width: fit-content;
-  cursor: pointer;
+  outline-offset: 1px;
 }
 
 .search-form__label-text {
-  font-family: "Fira Sans Condensed";
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.6px;
   color: #fff;
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
 }
 
 .search-form__fieldset {
   border: none;
 }
 
-/* .search-form__fieldset:not(:last-child) {
-  margin-right: 15px;
-} */
-
 .search-form__fieldset-title {
   margin-bottom: 5px;
-  font-family: "Fira Sans Condensed";
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.6px;
   color: #fff;
+  font-family: "Fira Sans Condensed", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
 }
 
 .content__details {
@@ -256,20 +244,19 @@ ol {
 
 .title {
   margin-bottom: 26px;
-  font-family: "Oswald", sans-serif;
-  font-size: 75px;
-  font-weight: 700;
-  line-height: 70.5px;
   color: #fff;
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
   text-transform: uppercase;
 }
 
 .content__list {
   position: relative;
+  max-height: 298px;
   overflow-y: auto;
-  height: 298px;
 }
-
 
 /* TEMPLATE 1 */
 .content__list-item:not(:last-child) {
@@ -281,11 +268,9 @@ ol {
 }
 
 .content__card-link {
-  /* margin: 2px 3px;
-  padding: 2px; */
   display: block;
-  text-decoration: none;
   color: #fff;
+  text-decoration: none;
 }
 
 .content__card-link:active {
@@ -307,35 +292,31 @@ ol {
 
 .content__video-card {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(200px, auto) minmax(auto, 194px);
   align-items: flex-start;
 }
 
 .content__video-card-title {
   margin-bottom: 6px;
-  font-family: "Oswald", sans-serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 100%;
   color: #fff;
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
   text-transform: uppercase;
-
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 16.2px;
   color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
 }
 
 .content__video-card-thumbnail {
-  max-width: 194px;
   width: 100%;
+  max-width: 194px;
   height: 103px;
 }
 
-.content__video-card-description-container {
-  flex-grow: 1;
-}
