--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,7 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -318,5 +319,7 @@ ol {
   width: 100%;
   max-width: 194px;
   height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
