--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
@@ -50,7 +53,7 @@ ol {
 .button {
   width: fit-content;
   border: none;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   padding: 6px 20px;
   color: #fff;
   font-family: "Fira Sans Condensed", Arial, sans-serif;
@@ -80,13 +83,7 @@ ol {
 
 .more-button {
   width: 99%;
-  margin: 2px 3px;
-}
-
-.page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin: 0 0 3px 3px;
 }
 
 .content {
@@ -94,9 +91,7 @@ ol {
   align-items: flex-end;
   gap: 30px;
   max-width: 1140px;
-  min-height: 534px;
   margin: 133px 30px;
-  overflow: hidden;
 }
 
 .result__video-container {
@@ -204,7 +199,7 @@ ol {
   cursor: pointer;
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
 
@@ -257,7 +252,6 @@ ol {
   position: relative;
   max-height: 298px;
   overflow-y: auto;
-  overflow-x: hidden;
 }
 
 /* TEMPLATE 1 */
@@ -271,6 +265,7 @@ ol {
 
 .content__card-link {
   display: block;
+  margin: 3px;
   color: #fff;
   text-decoration: none;
 }
@@ -299,13 +294,17 @@ ol {
 }
 
 .content__video-card-title {
+  max-width: 200px;
   margin-bottom: 6px;
+  overflow: hidden;
   color: #fff;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
